--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,14 @@ services:
   worker:
     build: .
     environment:
+      API_HASH: $API_HASH
+      APP_ID: $APP_ID
+      ARIA_TWO_STARTED_PORT: $ARIA_TWO_STARTED_PORT
+      AUTH_CHANNEL: $AUTH_CHANNEL
+      CHUNK_SIZE: $CHUNK_SIZE
+      EDIT_SLEEP_TIME_OUT: $EDIT_SLEEP_TIME_OUT
       ENV: $ENV
+      INDEX_LINK: $INDEX_LINK
+      OWNER_ID: $OWNER_ID
+      TG_BOT_TOKEN: $TG_BOT_TOKEN
+      
